# rag-agent

./: .gitignore  app.py  main.ipynb  main.py  package.json  pcdb.py  pyproject.toml  test_keyword_search.py
data/: embedded_paragraphs.pkl
lib/: gemini.py  keyword_search.py  prompts.py  semantic_search.py
static/: animations.css  index.js  output.css  styles.js
templates/: index.html
