[project]
name = "rag-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.128.0",
    "google-genai>=1.56.0",
    "hf-transfer>=0.1.9",
    "huggingface>=0.0.1",
    "huggingface-hub>=0.36.0",
    "jinja2>=3.1.6",
    "nltk>=3.9.2",
    "pinecone>=8.0.0",
    "python-dotenv>=1.2.1",
    "redis>=7.1.0",
    "sentence-transformers>=5.2.0",
    "torch>=2.9.1",
    "triton>=3.5.1",
    "uvicorn>=0.40.0",
]
